# computer_vision

./: ConnectedComponentsFilter.cpp  ConnectedComponentsFilter.h  Detector.cpp  FireDetectAlgorithm.h  FireDetectOnColorAlgorithm.cpp  FireDetectOnDynamicAlgorithm.cpp  FireDetectOnDynamicAlgorithm.h  LeftThings.h  LeftThingsDetector.h  MorphologyFilter.h  Object.h  SmokeDetectOnContrastAlgorithm.h  SmokeDetectSettings.cpp  SmokeDetectSettings.h  SmokeDetector.h
dva/: AnCommon.cpp  AnCommon.h  Detector.h  FireDetectOnColorAlgorithm.h  ImageFilter.h  LeftThings.cpp  LeftThingsDetector.cpp  LeftThingsDetectorSettings.cpp  LeftThingsDetectorSettings.h  MorphologyFilter.cpp  SmokeDetectAlgorithm.h  SmokeDetectOnContrastAlgorithm.cpp  SmokeDetector.cpp
external_libs/lib/: libopencv_highgui.so.3.0  libopencv_legacy.so.3.0  libopencv_video.so.3.0  libtiff.so.3.9.5  libtiffxx.so.3.9.5
external_libs/lib64/: libopencv_calib3d.so.3.0.0  libopencv_contrib.so.3.0.0  libopencv_core.so.3.0.0  libopencv_cuda.so.3.0.0  libopencv_cudaarithm.so.3.0.0  libopencv_cudabgsegm.so.3.0.0  libopencv_cudacodec.so.3.0.0  libopencv_cudafeatures2d.so.3.0.0  libopencv_cudafilters.so.3.0.0  libopencv_cudaimgproc.so.3.0.0  libopencv_cudaoptflow.so.3.0.0  libopencv_cudastereo.so.3.0.0  libopencv_cudawarping.so.3.0.0  libopencv_features2d.so.3.0.0  libopencv_flann.so.3.0.0  libopencv_highgui.so.3.0.0  libopencv_imgproc.so.3.0.0  libopencv_legacy.so.3.0.0  libopencv_ml.so.3.0.0  libopencv_nonfree.so.3.0.0  libopencv_objdetect.so.3.0.0  libopencv_optim.so.3.0.0  libopencv_photo.so.3.0.0  libopencv_shape.so.3.0.0  libopencv_softcascade.so.3.0.0  libopencv_stitching.so.3.0.0  libopencv_superres.so.3.0.0  libopencv_video.so.3.0.0  libopencv_videostab.so.3.0.0
samples/background_separation/background_separation/: CMakeLists.txt  background_separation.pro  bs_sample  bs_sample_run.sh  main.cpp  make.sh
samples/background_separation/background_separation_v2/: CMakeLists.txt  blobtrack_sample  blobtrack_sample.cpp  blobtrack_sample.pro  blobtrack_sample_run.sh
samples/motion_detection/motion_detection_v1/: CMakeLists.txt  motempl  motempl.cpp  motempl.pro  motion_template_run.sh
